--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     ]
   },
   "devDependencies": {
-    "@babel/plugin-transform-private-property-in-object": "^7.25.7"
+    "@babel/plugin-transform-private-property-in-object": "^7.25.7",
+    "@babel/plugin-proposal-private-property-in-object": "7.21.11"
   }
 }
