--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -46,7 +46,7 @@ jobs:
       env:
         GOOGLE_CREDENTIALS: ${{ secrets.GCP_CREDENTIALS }}
       run: |
-        echo "${GCP_CREDENTIALS}" > $HOME/gcp-key.json
+        echo "${GOOGLE_CREDENTIALS}" > $HOME/gcp-key.json
         export GOOGLE_APPLICATION_CREDENTIALS=$HOME/gcp-key.json
         cat $HOME/gcp-key.json
         gcloud auth activate-service-account --key-file=$HOME/gcp-key.json
