--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -42,30 +42,16 @@ jobs:
       with:
         terraform_version: 1.5.7
 
-    - name: Autheticate with GCP
+    - name: Autheticate with AWS
       env:
-        GOOGLE_CREDENTIALS: ${{ secrets.GCP_CREDENTIALS }}
+        AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
+        AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
+        AWS_REGION: us-east-1  # Update with the region of your choice
       run: |
-        echo "${GOOGLE_CREDENTIALS}" > $HOME/gcp-key.json
-        export GOOGLE_APPLICATION_CREDENTIALS=$HOME/gcp-key.json
-        cat $HOME/gcp-key.json
-        gcloud auth activate-service-account --key-file=$HOME/gcp-key.json
-        gcloud config set project ${{secrets.PROJECT_ID}}
+        echo "aws AUTHENTECATION COMPLETE"
     
     - name: Initialize Terraform
-      env:
-          GOOGLE_APPLICATION_CREDENTIALS: $HOME/gcp-key.json
-          TF_VAR_project_id: ${{secrets.PROJECT_ID}}
-          TF_VAR_region: us-central1
-          TF_VAR_zone: us-central1-a
-
       run: terraform init
-    
-    - name: Terraform Format Check
-      run: terraform fmt -check
-    
-    - name: Terraform Validate
-      run: terraform validate
 
     - name: Terraform Plan
       run: terraform plan -out=tfplan
