aded aws action

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -43,13 +43,12 @@ jobs:
         terraform_version: 1.5.7
 
     - name: Autheticate with AWS
-      env:
+      uses: aws-actions/configure-aws-credentials@v1
+      with:
         AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
         AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
         AWS_REGION: us-east-1  # Update with the region of your choice
-      run: |
-        echo "aws AUTHENTECATION COMPLETE"
-    
+
     - name: Initialize Terraform
       run: terraform init
 
