--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -34,27 +34,31 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
-    - name: Checkout Code
-      uses: actions/checkout@v4
+    
+    - uses: actions/checkout@v3
+    - uses: actions/setup-node@v3
+      with:
+        node-version: '14'
+
+    - name: Configure AWS credentials
+      uses: aws-actions/configure-aws-credentials@v1
+      with:
+        aws-access-key-id: '${{ secrets.AWS_ACCESS_KEY_ID }}'
+        aws-secret-access-key: '${{ secrets.AWS_SECRET_ACCESS_KEY }}'
+        aws-region: us-east-2
 
     - name: Setup Terraform
       uses: hashicorp/setup-terraform@v2
       with:
-        terraform_version: 1.5.7
-
-    - name: Autheticate with AWS
-      uses: aws-actions/configure-aws-credentials@v1
-      with:
-        aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
-        aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
-        aws-region: "us-east-1"
+        terraform_wrapper: false
         
-    - name: Initialize Terraform
-      run: terraform init
-
-    - name: Terraform Plan
-      run: terraform plan -out=tfplan
-    
     - name: Terraform Apply
-      if: github.event_name == 'push'
-      run: terraform apply -auto-approve tfplan
+      id:   apply
+      env:
+        TF_VAR_ec2_name:  "${{ github.event.inputs.ec2-name }}"
+      run: |
+        cd tf-example/
+        terraform init
+        terraform validate
+        terraform plan 
+        terraform apply -auto-approve
