--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -40,7 +40,8 @@ jobs:
           password: ${{secrets.DOCKERHUB_TOKEN}}
       
       - name: Set up Docker Buildx
-        uses: docker/setup-buildx-action@v3
+        # uses: docker/setup-buildx-action@v3
+        run: docker build -t ${{secrets.DOCKERHUB_USERNAME}}/3mtt:latest .
       
       - name: Build and Push
         uses: docker/build-push-action@v6
