--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -41,8 +41,14 @@ jobs:
           terraform plan 
           terraform apply -auto-approve
 
+      - name: Configure SSH Key
+        run: |
+          echo "${{ secrets.AWS_PRIVATE_KEY }}" > ~/.ssh/id_rsa
+          chmod 600 ~/.ssh/id_rsa
+          echo "Private key configured"
 
-    # run-docker-image:
+
+# run-docker-image:
     #     needs: [deploy-ec2-terraform]
     #     runs-on: self-hosted
     #     steps: 
