--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -38,13 +38,14 @@ jobs:
         with:
           username: ${{secrets.DOCKERHUB_USERNAME}}
           password: ${{secrets.DOCKERHUB_TOKEN}}
-      
+
       - name: Set up Docker Buildx
         uses: docker/setup-buildx-action@v3
         # run: docker build . --file Dockerfile --tag ${{secrets.DOCKERHUB_USERNAME}}/3mtt:latest
-      
+
       - name: Build and Push
         uses: docker/build-push-action@v6
         with:
+          contex: .
           push: true
           tags: ${{secrets.DOCKERHUB_USERNAME}}/3mtt:latest
