--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -47,5 +47,6 @@ jobs:
         uses: docker/build-push-action@v6
         with:
           contex: .
+          file: ./Dockerfile
           push: true
           tags: ${{secrets.DOCKERHUB_USERNAME}}/3mtt:latest
