--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -1,50 +1,47 @@
-name: deploy to Ec2
+name: deploy to Google Cloud Run
 
 on:
-    # pull_request:
-    #     branches: ["Main"]
+
   workflow_run:
     workflows: ["3MTT App CI"]
     types:
      - completed
 
+env:
+  PROJECT_ID: ${{ secrets.PROJECT_ID }}
+  SERVICE_ACCOUNT_KEY: ${{ secrets.GCP_CREDENTIALS}}
+
 jobs:
-    deploy-ec2-terraform:
-    # needs: [deploy-to-dockerHub]
-      runs-on: ubuntu-latest
+  deploy:
+    runs-on: ubuntu-latest
 
-      steps:
-        
+    steps:
       - uses: actions/checkout@v3
-      - uses: actions/setup-node@v3
         with:
-          node-version: '14'
+          fetch-depth: 0
 
-      - name: Configure AWS credentials
-        uses: aws-actions/configure-aws-credentials@v1
+      - id: 'auth'
+        name: Configure GCP credentials
+        uses: google-github-actions/auth@v2
         with:
-          aws-access-key-id: '${{ secrets.AWS_ACCESS_KEY_ID }}'
-          aws-secret-access-key: '${{ secrets.AWS_SECRET_ACCESS_KEY }}'
-          aws-region: us-east-2
+          credentials_json: '${{ secrets.GCP_CREDENTIALS }}'
+          token_format: 'access_token'
 
-      - name: Setup Terraform
-        uses: hashicorp/setup-terraform@v2
+      - name: Log in to GCR
+        uses: docker/login-action@v1
         with:
-          terraform_wrapper: false
-
-      - name: Terraform Apply
-        id:   apply
-        env:
-          TF_VAR_ec2_name:  "${{ github.event.inputs.ec2-name }}"
+          registry: us-docker.pkg.dev
+          # username: _json_key
+          password: ${{ secrets.GCP_CREDENTIALS }}
+          
+      - name: Build and Push Docker image to GCR
         run: |
-          cd tf-example/
-          terraform init
-          terraform validate
-          terraform plan 
-          terraform apply -auto-approve
-
-      - name: Configure SSH Key
+          docker build -t us-docker.pkg.dev/${{ env.PROJECT_ID }}/YOUR_REPO_NAME/IMAGE_NAME:${{ github.sha }} .
+          docker push us-docker.pkg.dev/${{ env.PROJECT_ID }}/YOUR_REPO_NAME/IMAGE_NAME:${{ github.sha }}
+      
+      - name: Deploy to Cloud Run
         run: |
-          echo "${{ secrets.AWS_PRIVATE_KEY }}" > ~/.ssh/id_rsa
-          chmod 600 ~/.ssh/id_rsa
-          echo "Private key configured"
+          terraform init -input=true
+          terraform state list
+          terraform plan -var="image_tag=${{ github.sha }}"
+          terraform apply -var="image_tag=${{ github.sha }}" -auto-approve
