--- a/.github/workflows/google-cloudrun-docker.yml
+++ b/.github/workflows/google-cloudrun-docker.yml
@@ -47,7 +47,7 @@ jobs:
         run: |-
           echo "Deploying to Cloud Run..."
           gcloud run deploy "${{ env.SERVICE }}" \
-            --image "${DOCKER_TAG}" \
+            --image "${{ env.SERVICE }}" \
             --region "${{ env.REGION }}" \
             --allow-unauthenticated \
             --quiet
