--- a/.github/workflows/google-cloudrun-docker.yml
+++ b/.github/workflows/google-cloudrun-docker.yml
@@ -47,7 +47,7 @@ jobs:
         run: |-
           echo "Deploying to Cloud Run..."
           gcloud run deploy "${{ env.SERVICE }}" \
-            --image gcr.io/${{ env.PROJECT_ID }}/${{ env.SERVICE }}:latest \
+            --image ${{ env.REGION }}-docker.pkg.dev/${{ env.PROJECT_ID }}/${{ env.SERVICE }}/${{ env.SERVICE }}:latest
             --region "${{ env.REGION }}" \
             --allow-unauthenticated \
             --quiet
