--- a/.github/workflows/google-cloudrun-docker.yml
+++ b/.github/workflows/google-cloudrun-docker.yml
@@ -34,7 +34,7 @@ jobs:
       # Build and push the Docker image to Google Artifact Registry
       - name: 'Build and Push Docker Image'
         run: |-
-          DOCKER_TAG="${{ env.REGION }}-docker.pkg.dev/${{ env.PROJECT_ID }}/${{ env.SERVICE }}/${{ env.SERVICE }}:latest"
+          DOCKER_TAG="${{ env.REGION }}-docker.pkg.dev/${{ env.PROJECT_ID }}/${{ env.SERVICE }}/${{ env.SERVICE }}:${{ github.sha }}"
           echo "Building Docker image..."
           docker build -t "${DOCKER_TAG}" .
           echo "Authenticating Docker with gcloud..."
@@ -47,7 +47,7 @@ jobs:
         run: |-
           echo "Deploying to Cloud Run..."
           gcloud run deploy "${{ env.SERVICE }}" \
-            --image "us-docker.pkg.dev/${{ env.PROJECT_ID }}/${{ env.SERVICE }}/${{ env.SERVICE }}:latest"\
+            --image "${DOCKER_TAG}"\
             --region "${{ env.REGION }}" \
             --allow-unauthenticated \
             --quiet
