--- a/.github/workflows/google-cloudrun-docker.yml
+++ b/.github/workflows/google-cloudrun-docker.yml
@@ -1,10 +1,12 @@
 name: 'Build and Deploy to Cloud Run'
 
 on:
-  push:
-    branches: 
-      ["Main"] # Trigger on pushes to the main branch
-
+  # push:
+  #   branches: 
+  #     ["Main"] # Trigger on pushes to the main branch
+  pull_request:
+    branches: ["Main"]
+    
 env:
   PROJECT_ID: ${{ vars.PROJECT_ID }} # Update with your Google Cloud project ID
   REGION: ${{ vars.LOCATION }} # Update with your region
